--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>E-boutique</title>
     <link rel="stylesheet" href="index.css">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-   
+
 </head>
 
-<body >
+<body>
     <nav>
         <img src="img/logo.png" alt="Logo">
         <div>
@@ -32,58 +32,201 @@
         </div>
     </nav>
     <main>
-    <div class="about">
-        
-        <button class="btn1">Découvrir</button>
-    </div>
-    <!-- partie collection -->
-     <div class="coll">
-     <div class="grid grid-cols-1 sm:grid-cols-1 md:grid-cols-2  sm:ms-1 gap-30 p-4 mt-10" >
-        <div class="flex flex-col items-center ">
-            <img src="img/img-col1.jpeg" class="w-full  h-auto mb-2">
-            <a href="#" class="text-blue-300 text-3xl hover:text-amber-300">Bebé Garçon 0-3 ans</a>
+        <div class="about bg-cover h-screen flex items-center justify-center"
+            style="background-image: url('img/back ground.jpeg');">
+            <button
+                class="bg-blue-600 px-3 py-3 rounded-lg mt-16 text-white border-0 text-lg sm:text-xl">Découvrir</button>
+        </div>
+        <!-- partie collection -->
+        <div class=" m-10">
 
+            <h1 class="text-center text-blue-600 font-serif text-xl md:text-3xl ">Nos Collection</h1>
+
+            <div class="grid grid-cols-1 sm:grid-cols-1 md:grid-cols-2  sm:ms-1 gap-30 p-4 mt-10">
+                <div class="flex flex-col items-center ">
+                    <img src="img/img-col1.jpeg" class="w-full  h-auto mb-2">
+                    <a href="#" class="text-blue-300  text-lg md:text-3xl hover:text-amber-300">Bebé Garçon 0-3 ans</a>
+
+
+                </div>
+                <div class="flex flex-col items-center ">
+                    <img src="img/img-col3.jpeg" class="w-full  h-auto mb-2">
+                    <a href="#" class="text-blue-300 text-lg md:text-3xl hover:text-amber-300">Cérémonie Garçon</a>
+
+
+                </div>
+                <div class="flex flex-col items-center ">
+                    <img src="img/img-col-4.jpeg" class="w-full  h-auto mb-2">
+                    <a href="#" class="text-blue-300 text-lg md:text-3xl hover:text-amber-300">Bébe fille 0-3ans</a>
+
+
+                </div>
+                <div class="flex flex-col items-center ">
+                    <img src="img/img-col-3.jpeg" class="w-full  h-auto mb-2">
+                    <a href="#" class="text-blue-300 text-lg md:text-3xl hover:text-amber-300">Cérémonie fille</a>
+
+
+                </div>
+                <div class="flex flex-col items-center ">
+                    <img src="img/img 6.jpeg" class="w-full  h-auto mb-2">
+                    <a href="#" class="text-blue-300 text-lg md:text-3xl hover:text-amber-300">Chaussure</a>
+
+
+                </div>
+                <div class="flex flex-col items-center ">
+                    <img src="img/img7.jpeg" class="w-full  h-auto mb-2">
+                    <a href="#" class="text-blue-300 text-lg md:text-3xl hover:text-amber-300">Accésoires</a>
+
+
+                </div>
+
+
+
+
+
+            </div>
+        </div>
+        <!--nouvelle arivage-->
+
+        <div class="m-10 ">
+
+            <h1 class="text-center text-blue-600  font-serif text-xl md:text-3xl mb-5">Nouvelle Arrivage</h1>
+
+
+            <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-6 p-4 mt-5">
+                <!-- Ajusté pour les petits écrans -->
+                <div class="flex flex-col items-center">
+                    <img src="img/V1.jpeg" class="w-24 h-24 sm:w-full sm:h-auto mb-2 rounded-full object-cover">
+                    <p class="text-black text-center text-lg md:text-2xl">Combinaison bébé garçon style polo</p>
+                    <p class="text-blue-400  text-center text-lg md:text-2xl">299.00 dh</p>
+                </div>
+
+                <div class="flex flex-col items-center">
+                    <img src="img/V2.jpeg" class="w-24 h-24 sm:w-full sm:h-auto mb-2 rounded-full object-cover">
+                    <p class="text-black text-center text-lg md:text-2xl">Ensemble Sweat et jupe plissée - bleu</p>
+                    <p class="text-blue-400 text-center text-lg md:text-2xl">379.00 dh</p>
+                </div>
+
+                <div class="flex flex-col items-center">
+                    <img src="img/V4 (2).jpeg" class="w-24 h-24 sm:w-full sm:h-auto mb-2 rounded-full object-cover">
+                    <p class="text-black text-center text-lg md:text-2xl">Robe Kuromi enfant fille - violet</p>
+                    <p class="text-blue-400 text-center text-lg md:text-2xl">339.00 dh</p>
+                </div>
+
+                <div class="flex flex-col items-center">
+                    <img src="img/V4 (1).jpeg" class="w-24 h-24 sm:w-full sm:h-auto mb-2 rounded-full object-cover">
+                    <p class="text-black text-center text-lg md:text-2xl">Robe d'été en piqué de coton enfant</p>
+                    <p class="text-blue-400 text-center text-lg md:text-2xl">319.00 dh</p>
+                </div>
+                <div class="flex flex-col items-center">
+                    <img src="img/v5.jpeg" class="w-24 h-24 sm:w-full sm:h-auto mb-2 rounded-full object-cover">
+                    <p class="text-black text-center text-lg md:text-2xl">
+                        Ensemble sport polo + short enfant </p>
+                    <p class="text-blue-400 text-center text-lg md:text-2xl">349.00 dh</p>
+                </div>
+                <div class="flex flex-col items-center">
+                    <img src="img/v6.jpeg" class="w-24 h-24 sm:w-full sm:h-auto mb-2 rounded-full object-cover">
+                    <p class="text-black text-center text-lg md:text-2xl">Robe cérémonie brodée fleurs enfant</p>
+                    <p class="text-blue-400 text-center text-lg md:text-2xl">499.00 dh</p>
+                </div>
+                <div class="flex flex-col items-center">
+                    <img src="img/v7.jpeg" class="w-24 h-24 sm:w-full sm:h-auto mb-2 rounded-full object-cover">
+                    <p class="text-black text-center text-lg md:text-2xl">Robe d'été en piqué de coton enfant</p>
+                    <p class="text-blue-400 text-center text-lg md:text-2xl">399.00 dh</p>
+                </div>
+                <div class="flex flex-col items-center">
+                    <img src="img/v8.jpeg" class="w-24 h-24 sm:w-full sm:h-auto mb-2 rounded-full object-cover">
+                    <p class="text-black text-center text-lg md:text-2xl">Robe de fête à volants enfant</p>
+                    <p class="text-blue-400 text-center text-lg md:text-2xl">599.00 dh</p>
+                </div>
+            </div>
+        </div>
+        <!--plus d'info-->
+        <div class="m-10">
+            <div class="grid grid-cols-1 sm:grid-cols-1 md:grid-cols-2  gap-10 p-4 mt-5">
+                <div>
+                    <img src="img/v9.jpeg" alt="">
+
+                </div>
+                <div class="flex flex-col justify-center items-start  ">
+                    <h6 class="text-left text-gray-400 text-base md:text-xl p-2">Les indispensables</h6>
+                    <h1 class="text-left text-black text-xl md:text-3xl p-2">Robe d'Été badge brodé</h1>
+                    <P class=" text-gray-400   text-justify  text-base md:text-xl p-3">Alliez <b> raffinement classique
+                            et modernité avec cette sublime robe habillée </b>violète! Confectionnée par un tissu doux
+                        et léger 100% coton,<b> elle séduit par sa coupe tendance, ses détails brodés raffinés et sa
+                            couleur intense qui en font une pièce incontournable </b> pour toutes les occasions
+                        spéciales.
+
+                    </P>
+                    <button
+                        class=" bg-amber-400 border-amber-500 rounded-xl p-3    hover:text-blue-500">Acheter</button>
+                </div>
+
+                <div class="flex flex-col justify-center items-start ">
+                    <h6 class="text-left text-gray-400 text-base md:text-xl p-2">Le style</h6>
+                    <h1 class="text-left text-black text-xl md:text-3xl p-2">Costume 4 pièces</h1>
+                    <P class=" text-gray-400   text-justify  text-base md:text-xl p-3">Apportez une touche de
+                        raffinement à votre style <b> avec cet ensemble complet idéal pour toutes les grandes occasions.</b>
+                        Avec une conception soignée et des détails minutieux, ce costume garantit une allure à la fois
+                        classique et moderne.
+
+                    </P>
+                    <button
+                        class=" bg-amber-400 border-amber-500 rounded-xl p-3    hover:text-blue-500">Acheter</button>
+                </div>
+                <div>
+                    <img src="img/v10.jpeg" alt="">
+
+                </div>
+
+                <div>
+                    <img src="img/v11.jpeg" alt="">
+
+                </div>
+                <div class="flex flex-col justify-center items-start  ">
+                    <h6 class="text-left text-gray-400 text-base md:text-xl p-2">les incontournables</h6>
+                    <h1 class="text-left text-black text-xl md:text-3xl p-2">Set naissance imprimé 7 pièces en coton
+                        doux</h1>
+                    <P class=" text-gray-400   text-justify  text-base md:text-xl p-3">Offrez un cocon de douceur aux
+                        tout-petits avec ce charmant set pour nouveau-né, <b>parfait en cadeau de naissance ou à glisser
+                        dans la valise de maternité </b>. Composé de 7 pièces essentielles en coton doux, ce coffret garantit
+                        confort, sécurité et <b> tendresse dès les premiers jours de vie. </b>
+
+                        Chaque pièce est confectionnée en 100 % coton, idéal pour la peau délicate de bébé: respirant,
+                        hypoallergénique et ultra-confortable
+
+                    </P>
+                    <button
+                        class=" bg-amber-400 border-amber-500 rounded-xl p-3    hover:text-blue-500">Acheter</button>
+                </div>
+
+            </div>
 
         </div>
-        <div class="flex flex-col items-center ">
-            <img src="img/img-col3.jpeg" class="w-full  h-auto mb-2">
-            <a href="#" class="text-blue-300 text-3xl hover:text-amber-300">Cérémonie Garçon</a>
+    </main>
+    <footer class="bg-blue-500 text-white    p-1  md:p-4">
+        <div class="flex flex-col items-center">
+            <img src="img/logo.png" class="h-10 mb-4">
 
+            <div class="flex space-x-6 mb-4">
+                <a href="#" class="hover:text-blue-300">
+                    <img src="img/facebook (1).png" alt="Facebook" class="h-6 w-6">
+                </a>
+                <a href="#" class="hover:text-blue-300">
+                    <img src="img/instagram (1).png" alt="Instagram" class="h-6 w-6">
+                </a>
+                <a href="#" class="hover:text-blue-300">
+                    <img src="img/tic-tac.png" alt="TikTok" class="h-6 w-6">
+                </a>
+                <a href="#" class="hover:text-blue-300">
+                    <img src="img/twitter.png" alt="Twitter" class="h-6 w-6">
+                </a>
+            </div>
 
+            <p class="text-center">© 2025, Kiddie Time. Tous droits réservés</p>
         </div>
-        <div class="flex flex-col items-center ">
-            <img src="img/img-col-4.jpeg" class="w-full  h-auto mb-2">
-            <a href="#" class="text-blue-300 text-3xl hover:text-amber-300">Bébe fille 0-3ans</a>
+    </footer>
 
-
-        </div>
-        <div class="flex flex-col items-center ">
-            <img src="img/img-col-3.jpeg" class="w-full  h-auto mb-2">
-            <a href="#" class="text-blue-300 text-3xl hover:text-amber-300">Cérémonie fille</a>
-
-
-        </div>
-        <div class="flex flex-col items-center ">
-            <img src="img/img 6.jpeg" class="w-full  h-auto mb-2">
-            <a href="#" class="text-blue-300 text-3xl hover:text-amber-300">Chaussure</a>
-
-
-        </div>
-        <div class="flex flex-col items-center ">
-            <img src="img/img7.jpeg" class="w-full  h-auto mb-2">
-            <a href="#" class="text-blue-300 text-3xl hover:text-amber-300">Accésoires</a>
-
-
-        </div>
-        
-
-
-
-
-     </div>
-    </div>
-</main>
-   
 
 </body>
 
